# ythelhart

./: .gitignore  .pre-commit-config.yaml  README.md  leaderboard.json  main.spec  pyproject.toml  requirements.txt
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  ci.yml  codeql.yml
.zed/: settings.json
assets/images/extras/: button.aseprite
assets/images/map/: map.tiled-session
assets/images/map/base/: TX Tileset Stone Ground.tsx  TX Tileset Wall.tsx
assets/images/map/main/: Pixel 16 v2 village free.tsx  autotiles.tsx  mainlevbuild.tsx  map.tmx  village0001.tsx
assets/images/map/plants/: TX Plant with Shadow.tsx
assets/images/map/props/: TX Props with Shadow.tsx  TX Shadow.tsx
assets/images/map/structures/: TX Struct.tsx
src/: main.py
src/components/: __init__.py  button.py
src/core/: __init__.py  camera.py  credits.md  credits.txt  game.py  menu.py  progressbar.py
src/entity/: __init__.py  enemy.py  minotaur.py  pickup.py  player.py  projectile.py  rogue.py  tank.py
src/prefs/: __init__.py  constants.py  paths.py  style.py
src/screens/: __init__.py  credits.py  game_over.py  leaderboard.py  main_menu.py  name_input.py
src/systems/: __init__.py  leaderboard.py  level_system.py
src/utils/: __init__.py  background.py  frame.py
