[project]
name = "gaemu"
version = "0.1.0"
description = "A 2D RPG game."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pyinstaller>=6.16.0",
    "pytmx>=3.32",
]

[tool.pyright]
typeCheckingMode = "off"
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true

[tool.isort]
profile = "black"
